Fixed issue with quiz error message text not visible

--- a/src/main/sass/global.scss
+++ b/src/main/sass/global.scss
@@ -202,7 +202,7 @@ span.required {
 .quiz-question-wrongAnswer,
 .quiz-question-correctAnswer {
   padding: 5px 10px;
-  color: $red;
+  color: #fff;
   margin: 10px 0;
 }
 
